// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlocks should render correctly (snapshot) 1`] = `
<div>
  <code
    class="code"
  >
    CodeBlock
  </code>
</div>
`;

exports[`CodeBlocks should render correctly (snapshot) 2`] = `
<div>
  <pre
    class="code"
  >
    CodeBlock
  </pre>
</div>
`;
